--- a/src/pages/en/CD/biber.astro
+++ b/src/pages/en/CD/biber.astro
@@ -66,7 +66,7 @@ import Biber2 from '../../../assets/biber2.png'
       <div class="albumy-biber3-text">
 
         <div class="albumy-biber3-text-inside">
-          <h4>Pre-order Album Includes:</h4>
+          <h4>Order Album Includes:</h4>
           <p>
             - Original CD with autographs of the artists, <br>
             - A surprise gift. 
@@ -77,17 +77,17 @@ import Biber2 from '../../../assets/biber2.png'
     
     <div class="przesprzedaz-container">
       <button onclick="window.open('https://buy.stripe.com/8wMbJNfHi0XSdDq288', '_blank')">
-        Order in Pre-sale  
+        Order Now! 
         <div class="star-1"
         style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
         >
           <svg >
-            <circle cx="20" cy="20" r="10" fill="#0bee73" />
+            <circle cx="10" cy="20" r="10" fill="#0bee73" />
           </svg>
         </div>
         <div class="star-2">
           <svg >
-            <circle cx="20" cy="20" r="11" fill="#f55e5c" />
+            <circle cx="10" cy="20" r="11" fill="#f55e5c" />
           </svg>
         </div>
         <div 
@@ -95,22 +95,22 @@ import Biber2 from '../../../assets/biber2.png'
         style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
         >
           <svg >
-            <circle cx="20" cy="20" r="9" fill="#f7793c" />
+            <circle cx="10" cy="20" r="9" fill="#f7793c" />
           </svg>
         </div>
         <div class="star-4">
           <svg >
-            <circle cx="20" cy="20" r="9" fill="#f7793c" />
+            <circle cx="10" cy="20" r="9" fill="#f7793c" />
           </svg>
         </div>
         <div class="star-5">
           <svg >
-            <circle cx="20" cy="20" r="11" fill="#0bee73" />
+            <circle cx="10" cy="20" r="11" fill="#0bee73" />
           </svg>
         </div>
         <div class="star-6">
           <svg >
-            <circle cx="20" cy="20" r="10" fill="#f55e5c" />
+            <circle cx="10" cy="20" r="10" fill="#f55e5c" />
           </svg>
         </div>
       </button>
